[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resources/Puzzles/Puzzle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/Puzzles/Chapter IV/NodalVsMesh/NodalVsMeshQuestions.gd" type="Script" id=2]

[node name="NodalVsMeshQuestions" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Background" parent="." index="0"]
color = Color( 0.462745, 0.458824, 0.458824, 1 )

[node name="InstructionLabel" type="Label" parent="." index="2"]
margin_left = 16.9
margin_top = 47.2272
margin_right = 304.9
margin_bottom = 70.2272
text = "If Nodal requires fewer equations than Mesh."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionLabel2" type="Label" parent="." index="3"]
margin_left = 16.9
margin_top = 16.2106
margin_right = 304.9
margin_bottom = 39.2106
text = "Choose the appropriate Method:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningLabel" type="Label" parent="." index="4"]
margin_left = 64.6147
margin_top = 117.877
margin_right = 228.615
margin_bottom = 145.877
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NodalButton" type="Button" parent="." index="5"]
margin_left = 33.687
margin_top = 83.7558
margin_right = 139.687
margin_bottom = 103.756
text = "Nodal Analysis"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeshButton" type="Button" parent="." index="6"]
margin_left = 177.65
margin_top = 83.756
margin_right = 224.65
margin_bottom = 103.756
text = "Mesh Analysis"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="NodalButton" to="." method="_on_NodalButton_pressed"]
[connection signal="pressed" from="MeshButton" to="." method="_on_MeshButton_pressed"]
